style.css
*,
*::after,
*::before {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

html,
body {
  width: 100%;
  height: 100%;
}
body {
  position: relative;
  background-color: hsl(0, 0%, 98%);
  font-family: "Public Sans", sans-serif;
  overflow-x: hidden;

  & div.overlay {
    position: fixed;
    top: 0;
    width: 100vw;
    height: 100vh;
    background: #00000065;
    z-index: 10;
  }

  & div#elementMockup {
    position: absolute;
    right: 0;
    top: 0;
    width: 65%;
    height: 125vh;
    background-position: right top;
    background-image: url("./images/image-mockups.png");
    background-size: contain;
    background-repeat: no-repeat;
    transform: translate(10%, -5%);
    min-width: 450px;
    z-index: -1;

    @media screen and (max-width: 1200px) {
      width: 60%;
      height: 100vh;
      transform: translate(0%, -5%);
    }
  }

  & div#elementBg {
    position: absolute;
    right: 0;
    top: 0;
    width: 80%;
    height: 125vh;
    background-position: right top;
    background-image: url("./images/bg-intro-desktop.svg");
    background-size: contain;
    background-repeat: no-repeat;
    transform: translate(25%, -10%);
    min-width: 750px;
    z-index: -1;

    @media screen and (max-width: 750px) {
      background-image: url("./images/bg-intro-mobile.svg");
      width: 100%;
      transform: translate(0%, -10%);
    }
  }
}

body > header {
  position: fixed;
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  justify-content: space-between;
  align-items: center;
  padding-inline: 10%;
  background-color: #fff;
  width: 100%;
  list-style-type: none;
  height: 75px;
  z-index: 50;

  & button {
    width: fit-content;
    margin-left: auto;
  }

  & nav {
    position: relative;
    position: relative;
    height: 100%;
    width: max-content;
    & > ul {
      display: flex;
      gap: 2vw;
      height: 100%;
      justify-content: center;
      align-items: center;
      list-style-type: none;

      & > li {
        display: flex;
        position: relative;
        justify-content: center;
        align-items: center;
        height: 100%;
        &::after {
          position: absolute;
          content: "";
          left: 0;
          transition: all 0.1s ease-out;
          bottom: 0;
          width: 100%;
          height: 0px;
          background: linear-gradient(to right, hsl(136, 65%, 51%), hsl(192, 70%, 51%));
        }

        & > a {
          color: hsl(233, 8%, 62%);
          text-decoration: none;
        }
        &:has(a:hover)::after {
          height: 0.25em;
        }
      }
    }
  }

  @media screen and (max-width: 980px) {
    padding-inline: 5%;

    & button {
      padding: 0.75em 2em;
    }
  }
}

/* BURGER MENU */

body > header {
  & > span {
    position: absolute;
    display: none;
    width: 24px;
    height: 11px;
    background-image: url(./images/icon-hamburger.svg);
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    right: 5%;
    &:hover {
      cursor: pointer;
    }
    &.open {
      background-image: url(./images/icon-close.svg);
    }
  }
  @media screen and (max-width: 750px) {
    grid-template-columns: repeat(2, 1fr);
    & > li {
      position: absolute;
      left: 5%;
    }
    & nav {
      position: absolute;
      left: 50%;
      transform: translateX(-50%);
      align-items: center;
      padding-block: 0em;
      top: 75px;
      transition: all 0.2s ease-in-out;
      width: 90vw;
      background-color: white;
      height: 0vh;
      border-radius: 5px;
      & > ul {
        flex-direction: column;
        overflow: hidden;

        & > li {
          &::after {
            display: none;
          }
          & > a {
            color: black;
          }
        }
      }

      &.display {
        height: 40vh;
        top: 100px;
        padding-block: 2em;
      }
    }
    & button {
      display: none;
    }
    & > span {
      display: block;
    }
  }
}

p {
  font-size: 18px;
  color: hsl(233, 8%, 62%);
}

button {
  --light-green: 50%;
  --light-blue: 51%;
  border-radius: 2em;
  color: white;
  background: linear-gradient(to right, hsl(136, 65%, var(--light-green)), hsl(192, 70%, var(--light-blue)));
  padding: 1em 2.5em;
  border: none;
  font-size: 15px;
  font-weight: bold;
  &:hover {
    --light-green: 70%;
    --light-blue: 70%;
    cursor: pointer;
  }
}

section {
  position: relative;
  min-height: 100svh;
  padding-block: 10%;
  width: 100%;
  padding-inline: 10%;

  @media screen and (max-width: 980px) {
    padding-inline: 5%;
  }
}

body > main > section:first-child {
  display: grid;
  grid-template-columns: auto 1fr;

  & article {
    display: flex;
    flex-direction: column;
    gap: 2em;
    align-items: start;
    justify-content: center;
    width: 400px;

    & h1 {
      font-size: 50px;
      font-weight: 300;
    }

    & p {
      color: hsl(233, 8%, 62%);
      line-height: 3ch;
    }
  }

  @media screen and (max-width: 1200px) {
    align-items: end;
  }
  @media screen and (max-width: 750px) {
    grid-template-columns: 1fr;
    justify-items: center;
    text-align: center;
    padding-inline: 0;

    & > article {
      align-items: center;
      background-color: hsl(0, 0%, 98%);
      width: 100%;
    }
  }
}

body > main > section:nth-child(2) {
  display: grid;
  grid-template-rows: auto auto;
  background-color: hsl(220, 16%, 96%);
  gap: 50px;

  & > header {
    display: flex;
    flex-direction: column;
    gap: 20px;
    justify-content: center;
    align-items: start;
    & > h2 {
      font-size: 40px;
      font-weight: 300;
    }
    & p {
      color: hsl(233, 8%, 62%);
      line-height: 2.5ch;
    }
  }

  & > div {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
    width: 100%;
    gap: 10px;

    & > article {
      display: grid;
      align-content: center;
      gap: 30px;
      width: clamp(250px, 20%, 450px);
      & > img {
        padding-block-end: 10px;
      }
      & h3 {
        font-size: 25px;
        font-weight: 300;
      }

      & p {
        color: hsl(233, 8%, 62%);
        line-height: 3ch;
      }
    }
  }

  @media screen and (max-width: 750px) {
    text-align: center;
    & > div {
      grid-template-columns: 1fr;
      place-items: center;
      gap: 3em;
      & > article {
        width: 100%;
        justify-items: center;
      }
    }
  }
}

body > main > section:last-child {
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: space-around;

  & h2 {
    font-size: 40px;
    font-weight: 300;
  }

  & div {
    position: relative;
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
    width: 100%;
    gap: 2em;

    & > article {
      position: relative;
      display: flex;
      flex-direction: column;
      gap: 20px;
      background-color: #fff;

      & > *:not(img) {
        padding-inline: 20px;
      }
      & > sub {
        color: hsl(233, 8%, 62%);
      }
      & > img {
        object-fit: cover;
        height: 250px;
      }
      & > h3 {
        font-size: 25px;
        font-weight: 300;
        transition: all 0.1s ease-out;
        &:hover {
          color: hsl(136, 65%, 51%);
          cursor: pointer;
        }
      }
      & > P {
        padding-block-end: 1em;
      }
    }
  }

  @media screen and (max-width: 750px) {
    gap: 3em;
    & > h2 {
      text-align: center;
    }
    & p {
      font-size: 16px;
    }
  }
}

footer {
  position: relative;
  display: grid;
  grid-template-columns: auto auto 1fr;
  background-color: hsl(233, 26%, 24%);
  width: 100%;
  height: fit-content;
  padding-block: 50px;
  padding-inline: 10%;
  gap: 10%;

  & > div:first-child {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    & ul {
      display: flex;
      list-style-type: none;
      justify-content: space-between;
      gap: 10px;

      & img {
        &:hover {
          filter: invert(27%) sepia(100%) saturate(2000%) hue-rotate(70deg) brightness(300%) contrast(97%);
        }
      }
    }
  }
  & > div:nth-child(2) {
    display: flex;
    column-gap: 7.5vw;
    width: fit-content;
    & ul {
      display: flex;
      flex-direction: column;
      gap: 1em;
      list-style-type: none;
      color: white;
      & li {
        &:hover {
          color: hsl(136, 65%, 51%);
          cursor: pointer;
        }
      }
    }
  }

  & > div:last-child {
    display: flex;
    flex-direction: column;
    align-items: end;
    justify-content: space-between;
    margin-left: auto;

    & p {
      font-size: 15px;
    }
  }

  @media screen and (max-width: 980px) {
    padding-inline: 5%;
    gap: 5%;
  }

  @media screen and (max-width: 750px) {
    grid-template-rows: repeat(3, auto);
    grid-template-columns: 1fr;
    gap: 2em;

    & > div {
      gap: 0;
      &:first-child {
        justify-content: center;
        gap: 2em;
      }

      &:nth-child(2) {
        width: 100%;
        flex-direction: column;
        text-align: center;
        gap: 1em;
      }
      &:last-child {
        width: 100%;
        justify-content: center;
        align-items: center;
        gap: 2em;
      }
    }
  }
}

